fixed logics to adapt to pt-br && styling css: dark mode

--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 * {
+  background-color: #282a36;
   font-family: Arial, Helvetica, sans-serif;
+  color: #f8f9fa;
 }
 
 h1 {
   text-align: center;
+  color: #945885;
 }
 
 h3 {
   text-align: center;
   font-size: small;
+  color: #cbc0d3;
+  margin-bottom: 2rem;
 }
 
 #game-board {
@@ -18,7 +23,7 @@ h3 {
 }
 
 .letter-box {
-  border: 2px solid gray;
+  border: 2px solid #343746;
   border-radius: 3px;
   margin: 2px;
   font-size: 2.5rem;
@@ -32,7 +37,7 @@ h3 {
 }
 
 .filled-box {
-  border: 2px solid black;
+  /* border: 2px solid black; */
 }
 
 .letter-row {
